more updates for children

--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/view/ViewPastePage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/view/ViewPastePage.html
@@ -37,9 +37,8 @@
                 <h2>Paste Replies</h2>
             </div>
             <div class="block_content">
-                <ul>
-                    <li>Paste 1</li>
-                    <li>Paste 2</li>
+                <ul wicket:id="childPastes">
+                    <li><a wicket:id="viewChildPaste">Paste #<wicket:container wicket:id="pasteId">[pasteId]</wicket:container></a> <wicket:container wicket:id="posted">[posted]</wicket:container></li>
                 </ul>
             </div>
         </div>
