--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/view/ViewPastePage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/view/ViewPastePage.html
@@ -45,6 +45,35 @@
     <p>&nbsp;</p>
     </wicket:container>
 
+    <wicket:remove>
+    <div class="block">
+
+        <form>
+        <div class="block_head">
+            <div class="bheadl"></div>
+            <div class="bheadr"></div>
+
+            <h2>Highlight Sections</h2>
+        </div>
+        <div class="block_content">
+
+            <p>
+                Highlight specific sections of paste (e.g. 1-3 or 1,2,3 or 1,2-3)
+                <input type="text" />
+            </p>
+
+            <p class="right" align="right">
+                <input type="submit" class="submit medium" value="Highlight" />
+            </p>
+
+        </div>
+        </form>
+
+        <div class="bendl"></div>
+        <div class="bendr"></div>
+    </div>
+    </wicket:remove>
+
     <div class="block">
 
         <form wicket:id="replyForm">
