--- a/web/src/main/webapp/assets/css/style.css
+++ b/web/src/main/webapp/assets/css/style.css
@@ -386,7 +386,7 @@ a:hover {
 	background: #fff;
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
-	padding: 10px 20px 0;
+	padding: 10px 30px 0 20px;
 	}
 
 .block .block_content h1,
