--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/view/ViewPrivatePage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/view/ViewPrivatePage.html
@@ -1,4 +1,7 @@
 <html xmlns:wicket="http://wicket.apache.org">
+<wicket:head>
+    <meta NAME="ROBOTS" CONTENT="noindex" />
+</wicket:head>
 <wicket:extend>
 </wicket:extend>
 </html>
