--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/view/ViewPastePage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/view/ViewPastePage.html
@@ -2,82 +2,62 @@
 <wicket:extend>
 
     <wicket:container wicket:id="diffView">
-    <div class="block">
+    <div class="container">
 
-        <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
+        <h3>Diff With Original</h3>
 
-            <h2>Diff With Original</h2>
+        <button class="btn"><a wicket:id="originalPasteLink">Original Paste</a></button>
 
-            <ul class="tabs">
-                <li><a wicket:id="originalPasteLink">Original Paste</a></li>
-            </ul>
+        <div wicket:id="highlightedContent">[highlightedContent]</div>
 
-        </div>
-        <div class="block_content">
-
-            <div wicket:id="highlightedContent">[highlightedContent]</div>
-
-        </div>
-
-        <div class="bendl"></div>
-        <div class="bendr"></div>
     </div>
     </wicket:container>
 
 
-    <div class="block">
-        <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
+    <div class="container">
 
+    <div class="row" style="margin-top: 20px;">
+        <div class="span6">
             <strong>Language: <wicket:container wicket:id="type">[type]</wicket:container></strong>
-
-            <ul class="tabs">
-                <li><a wicket:id="rawLink">Raw</a></li>
-                <li><a wicket:id="downloadLink">Download</a></li>
-                <li><a wicket:id="markAbuseLink"><span wicket:id="markAbuseLabel">[markAbuseLabel]</span></a></li>
-                <li><a href="#replytopaste"><img src="assets/images/action_refresh.gif" border="0" /> Reply to Paste</a></li>
-            </ul>
-        </div>
-        <div class="block_content">
-
-            <div wicket:id="highlightedContent">[highlightedContent]</div>
-
         </div>
 
-        <div class="bendl"></div>
-        <div class="bendr"></div>
+        <div class="span6">
+            <div class="pull-right">
+            <div class="btn-group">
+              <button class="btn" wicket:id="hasImage"><i class="icon-file"></i> <a wicket:id="imageLocation" target="_blank">Image</a></button>
+              <button class="btn"><a wicket:id="rawLink">Raw</a></button>
+              <button class="btn"><a wicket:id="downloadLink">Download</a></button>
+              <button class="btn"><a wicket:id="markAbuseLink" class="text-warning" onclick="return confirm('Are you sure this paste is SPAM?');"><span wicket:id="markAbuseLabel">[markAbuseLabel]</span></a></button>
+            </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="container">
+                <div wicket:id="highlightedContent">[highlightedContent]</div>
+            </div>
+        </div>
+
     </div>
 
     <p>&nbsp;</p>
 
     <wicket:container wicket:id="hasChildPastes">
-        <div class="block">
-            <div class="block_head">
-                <div class="bheadl"></div>
-                <div class="bheadr"></div>
-
-                <h2>Paste Replies</h2>
-            </div>
-            <div class="block_content">
+        <div class="container">
+            <h3>Paste Replies</h3>
+            <div class="row">
                 <ul wicket:id="childPastes">
-                    <li><a wicket:id="viewChildPaste">Paste #<wicket:container wicket:id="pasteId">[pasteId]</wicket:container></a> <wicket:container wicket:id="posted">[posted]</wicket:container></li>
+                    <li><a wicket:id="viewChildPaste">Paste #<wicket:container wicket:id="pasteId">[pasteId]</wicket:container></a> <small wicket:id="posted">[posted]</small></li>
                 </ul>
             </div>
         </div>
-    <p>&nbsp;</p>
     </wicket:container>
 
     <div class="block">
 
         <form wicket:id="replyForm">
         <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
-
-            <h2><img src="assets/images/action_refresh.gif" border="0" /> Reply to Paste</h2>
+            <h3>Reply to Paste</h3>
         </div>
         <div class="block_content">
             <a name="replytopaste"></a>
@@ -96,12 +76,11 @@
         </div>
         </form>
 
-        <div class="bendl"></div>
-        <div class="bendr"></div>
     </div>
 
     <wicket:child/>
 
+    </div>
 
 </wicket:extend>
 </html>
