--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/view/ViewPastePage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/view/ViewPastePage.html
@@ -6,11 +6,14 @@
 
         <h3>Diff With Original</h3>
 
-        <button class="btn"><a wicket:id="originalPasteLink">Original Paste</a></button>
-
+        <div class="pull-right">
+            <button class="btn" wicket:id="originalPasteLink">Original Paste</button>
+        </div>
         <div wicket:id="highlightedContent">[highlightedContent]</div>
 
     </div>
+
+        <hr />
     </wicket:container>
 
 
@@ -31,6 +34,7 @@
               <wicket:container wicket:id="hasImage"><button class="btn btn-success" wicket:id="imageLocation"><i class="icon-file icon-white"></i> Image</button></wicket:container>
               <button class="btn" wicket:id="rawLink">Raw</button>
               <button class="btn" wicket:id="downloadLink">Download</button>
+              <button class="btn btn-success" wicket:id="repasteLink">Repaste</button>
               <wicket:remove>
               <button class="btn"><a class="text-warning" onclick="return confirm('Are you sure this paste is SPAM?');"><span>[markAbuseLabel]</span></a></button>
               </wicket:remove>
@@ -58,31 +62,6 @@
             </div>
         </div>
     </wicket:container>
-
-    <div class="block">
-
-        <form wicket:id="replyForm">
-        <div class="block_head">
-            <h3>Reply to Paste</h3>
-        </div>
-        <div class="block_content">
-            <a name="replytopaste"></a>
-
-            <textarea wicket:id="content" id="rawPaste" wrap="off"
-                      style="height: 250px; width: 100%; background-color: #eeeeee; border: 1px solid #555;"></textarea>
-
-            <span style="display: none; visibility: hidden;"><input wicket:id="email" /></span>
-
-            <p>&nbsp;</p>
-
-            <p class="right" align="right">
-                <input type="submit" class="submit long" value="Reply" />
-            </p>
-
-        </div>
-        </form>
-
-    </div>
 
     <wicket:child/>
 
